# MyWebsite

./: .dockerignore  .env.example  .env.loacl.example  .gitignore  AGENTS.md  API文档.md  API配置说明.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  IFLOW.md  README.md  docker-compose.yml  env  env.example  handywrite_backup_2025-07-24.json  index.html  nginx.conf  package-lock.json  package.json  setup.bat  start.bat  supervisord.conf  vite.config.js  项目总结.md
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.backend  README.md  app.py  config.py  config_example.py  docker-compose.yml  extensions.py  init_db.py  migrate_comment_status.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.py  test_ai.py  test_comment_limits.py  verify_env.py  后端使用与API测试指南.md  管理后台后端需求文档.md
backend/models/: __init__.py  ai_setting.py  article.py  avatar.py  comment.py  contact.py  log.py  recycle_bin.py  site_block.py  skill.py
backend/routes/: __init__.py  ai_settings.py  article.py  auth.py  avatar.py  comment.py  contact.py  export_import.py  log.py  public.py  recycle_bin.py  site_block.py  skill.py
backend/services/: ai.py  file.py  recycle_bin.py
backend/tests/: conftest.py  test_socketio_runtime.py
backend/tests/models/: test_article.py  test_comment.py
backend/tests/routes/: test_admin_articles.py  test_auth.py  test_comments.py  test_public_articles.py
backend/tests/utils/: test_comment_limits.py  test_image_utils.py  test_jwt.py  (+1 more)
backend/utils/: comment_limits.py  decorators.py  image_utils.py  jwt.py  response.py
(+108 files in other folders)
